# angel-identity-core

./: .env  .gitignore  Dockerfile  bulk_upload.py  docker-compose.yml  documentation.md  download_model.sh  face_recognition_tasks.md  index.html  main.py  pyproject.toml  requirements.txt
app/: config.py  exceptions.py  face_service.py  logging_config.py  main.py  models.py  mysql_vector_store.py  vector_store.py
test_gui/: app.py
