[project]
name = "angel-identity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.118.1",
    "insightface>=0.7.3",
    "onnxruntime>=1.23.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.15.1",
    "redis>=6.4.0",
]
