[project]
name = "angel-identity-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "insightface==0.7.3",
    "mysql-connector-python>=9.5.0",
    "numpy<2.0",
    "onnxruntime==1.17.0",
    "opencv-python==4.8.1.78",
    "pillow==10.1.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "qdrant-client==1.9.0",
    "redis==5.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn==0.24.0",
]
